# django-po-tools

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml
django_po_tools/: messages.py  po_auto_translate.py
